Freetype options are not usable
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Link issues together to show that they're related.
Learn more.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Jean-Baptiste Kempf added Component::Interface: Qt Severity::normal Type::bug Version::master git + 1 deleted label
added Component::Interface: Qt Severity::normal Type::bug Version::master git + 1 deleted label
- Jean-Baptiste Kempf changed milestone to %2.0.0 bugs
changed milestone to %2.0.0 bugs
commit 9cd51319 Author: Jean-Baptiste Kempf jb@videolan.org Date: Tue Nov 1 02:13:15 2011 +0100
Qt, sprefs: correctly implement freetype configurations Close [#5421](https://code.videolan.org/videolan/vlc/-/issues/5421)
Original author: jb@videolan.org
- Migration Bot added Status::fixed label
added Status::fixed label
- Migration Bot closed
closed
Please register or sign in to reply