Qt, sprefs: correctly implement freetype configurations

Close #5421